# doubao_TTS_to_open_ai_TTS

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  config.py  main.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  doubao_models.py  openai_models.py
app/routes/: __init__.py  audio.py
app/services/: __init__.py  converter.py  doubao_client.py
app/utils/: __init__.py  errors.py  logger.py
tests/: test_converter.py
